Convert connection tracking to a plugin

--- a/tox.ini
+++ b/tox.ini
@@ -125,7 +125,7 @@ commands = {[libp2p]commands}
 
 [common-lint]
 deps = .[p2p,trinity,lint,eth2,libp2p]
-setenv=MYPYPATH={toxinidir}:{toxinidir}/stubs
+setenv=MYPYPATH={toxinidir}
 commands=
     flake8 {toxinidir}/p2p
     flake8 {toxinidir}/tests
