--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ ignore=W504
 
 [isort]
 force_sort_within_sections=True
-known_third_party=async_service,hypothesis,pytest,async_generator,cytoolz,trio_typing,pytest_trio,factory,milagro_bls_binding
+known_third_party=async_service,asyncio_run_in_process,hypothesis,pytest,async_generator,cytoolz,trio_typing,pytest_trio,factory,milagro_bls_binding
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
